codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__next_prompt_suggestion_renders_as_empty_composer_placeholder.snap
---
source: tui/src/chatwidget/tests/next_prompt_suggestion.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"                                                                                "
"› run the tests                                                                 "
"                                                                                "
"  gpt-5.5 default · /tmp/project                                                "
