codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__parent_owned_thread_rejects_settings_shortcuts.snap
---
source: tui/src/chatwidget/tests/composer_submission.rs
expression: rendered
---
■ This sub-agent is controlled by its parent. Direct input is disabled.
■ This sub-agent is controlled by its parent. Direct input is disabled.
■ This sub-agent is controlled by its parent. Direct input is disabled.
