codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__permission_shortcut_loading.snap
---
source: tui/src/chatwidget/tests/permission_shortcuts_tests.rs
assertion_line: 156
expression: "render_bottom_popup(&chat, 80)"
---
  Update Model Permissions


›    Loading permission profiles…

  enter select · esc back
